--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "start:silent": "PORT=3001 BROWSER=none react-scripts start",
     "cy:open": "cypress open",
     "cypress": "start-server-and-test start:silent http://localhost:3001/ cy:open"
@@ -39,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^9.2.1"
+    "cypress": "^9.2.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
