--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "react-scripts test",
     "start:silent": "PORT=3001 BROWSER=none react-scripts start",
     "cy:open": "cypress open",
-    "cypress": "start-server-and-test start:silent http://localhost:3001/ cy:open"
+    "cy:run": "cypress run",
+    "cypress": "start-server-and-test start:silent http://localhost:3001/ cy:open",
+    "cypress:ci": "start-server-and-test start:silent http://localhost:3001/ cy:run"
   },
   "eslintConfig": {
     "extends": [
