--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "start:silent": "PORT=3001 BROWSER=none react-scripts start",
+    "start:silent": "PORT=3001 BROWSER=none react-app-rewired start",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cypress": "start-server-and-test start:silent http://localhost:3001/ cy:open",
@@ -46,7 +46,11 @@
     ]
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.9.12",
+    "babel-plugin-istanbul": "^6.1.1",
+    "customize-cra": "^1.0.0",
     "cypress": "^9.2.1",
+    "react-app-rewired": "^2.1.11",
     "start-server-and-test": "^1.14.0"
   }
 }
