Fixes article display in SingleArticle.jsx adds PORT=3001 to 'start' script in package.json for testing purposes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "start:silent": "PORT=3001 BROWSER=none react-app-rewired start",
