--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.24.0",
+    "i18next": "^21.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
