--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
